<resources>
    <string name="app_name">MyFoodManager</string>

    <string name="food_name_label">Food Name : </string>
    <string name="food_type_label">Food Type :</string>
    <string name="expiry_date_label">Expiry Date : </string>
    <string name="quantity_label">Quantity :</string>
    <string name="cost_label">Cost :</string>

    <string name="select_date">Select Date</string>

    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>

    <string name="add_food_item_to_fridge">ADD FOOD ITEM TO REFRIGERATOR</string>
    <string name="fridge_food_item_list">REFRIGERATOR FOOD ITEM LIST</string>
    <string name="edit_food_item_in_fridge">EDIT FOOD ITEM IN REFRIGERATOR</string>

    <string name="channel_name">MyFoodManger</string>
    <string name="channel_description">Food item is going to expire</string>

    <string-array name="food_spaces">
        <item>REFRIGERATOR</item>
        <item>FREEZER</item>
        <item>PANTRY</item>
        <item>KITCHEN CABINET</item>
    </string-array>

    <string-array name="fridge_food_list">
        <item>Cheddar cheese</item>
        <item>Eggs</item>
        <item>Milk</item>
        <item>Apples</item>
    </string-array>


    <string-array name="food_type_list">
        <item>Select</item>
        <item>grains</item>
        <item>beans</item>
        <item>nuts</item>
        <item>meat</item>
        <item>poultry</item>
        <item>fish</item>
        <item>seafood</item>
        <item>dairy</item>
        <item>drinks</item>
        <item>fruits</item>
        <item>vegetables</item>
        <item>herbs and spices</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
