<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.bu.metcs.myproject.AddFridgeFoodItemsFragment">


    <TextView
        android:id="@+id/textView"
        android:layout_width="396dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="11dp"
        android:gravity="center_horizontal"
        android:paddingLeft="12dp"
        android:paddingTop="10dp"
        android:paddingRight="15dp"
        android:text="@string/add_food_item_to_fridge"
        android:textColor="@color/blue"
        android:textSize="20dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/foodNameTextViewId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/food_name_label"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/foodNameId"
            android:layout_width="166dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/foodTypeTextViewId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/food_type_label"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/foodTypeId"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="" />

        <Spinner
            android:id="@+id/foodTypeSpinnerId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:entries="@array/food_type_list" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/expiryDateTextViewId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/expiry_date_label"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/expiryDateId"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:hint="@string/select_date"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/quantityTextViewId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/quantity_label"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/quantityId"
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/costTextViewId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/cost_label"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/costId"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="" />

    </LinearLayout>

    <!--
    <Button
        android:id="@+id/fridgeAddSaveBtnId"
        android:layout_width="91dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="56dp"
        android:onClick="onClickSave"
        android:text="@string/save_button"/>
   -->

</LinearLayout>


